Finalize Api and made it available with docker and docker compose.
